--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
-    
+    />
+
     <!-- Shizuku permissions -->
     <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
 
@@ -71,16 +70,19 @@
         <service
             android:name=".service.vpn.service.VpnConnectionServer"
             android:foregroundServiceType="systemExempted"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="ForegroundServicePermission" />
 
         <service
             android:name=".service.root.service.RootConnectionService"
             android:foregroundServiceType="systemExempted"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="ForegroundServicePermission" />
         <service
             android:name=".service.shizuku.ShizukuConnectionService"
             android:foregroundServiceType="systemExempted"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="ForegroundServicePermission" />
 
         <service
             android:name=".service.tiles.DnsQuickSettingsTile"
