--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ navigationCompose = "2.9.2"
 appcompat = "1.7.1"
 workRuntimeKtx = "2.10.2"
 hiltCommon = "1.2.0"
+m3color = "2024.6"
 
 [libraries]
 # DataStore
@@ -65,6 +66,9 @@ shizuku-api = { module = "dev.rikka.shizuku:api", version.ref = "shizuku-api" }
 shizuku-provider = { module = "dev.rikka.shizuku:provider", version.ref = "shizuku-provider" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 androidx-hilt-common = { group = "androidx.hilt", name = "hilt-common", version.ref = "hiltCommon" }
+
+# M3Color | https://github.com/Kyant0/m3color
+m3color = { module = "com.github.Kyant0:m3color", version.ref = "m3color" }
 
 [plugins]
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
