--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SYSTEM_EXEMPTED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    />
 
     <!-- Shizuku permissions -->
     <uses-permission android:name="moe.shizuku.manager.permission.API_V23" />
@@ -69,20 +68,29 @@
 
         <service
             android:name=".service.vpn.service.VpnConnectionServer"
-            android:foregroundServiceType="systemExempted"
-            android:exported="false"
-            tools:ignore="ForegroundServicePermission" />
+            android:foregroundServiceType="specialUse"
+            android:exported="false">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="Firewall and network filtering service" />
+        </service>
 
         <service
             android:name=".service.root.service.RootConnectionService"
-            android:foregroundServiceType="systemExempted"
-            android:exported="false"
-            tools:ignore="ForegroundServicePermission" />
+            android:foregroundServiceType="specialUse"
+            android:exported="false">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="Root-based firewall service" />
+        </service>
         <service
             android:name=".service.shizuku.ShizukuConnectionService"
-            android:foregroundServiceType="systemExempted"
-            android:exported="false"
-            tools:ignore="ForegroundServicePermission" />
+            android:foregroundServiceType="specialUse"
+            android:exported="false">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="Shizuku-based firewall service" />
+        </service>
 
         <service
             android:name=".service.tiles.DnsQuickSettingsTile"
